# Sameer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  movies.json  pyproject.toml
filmora/: main.py
notebooks/: DataPreProcessing.ipynb  DataPreperation.ipynb  ExplarotaryDataAnalysis.ipynb  ExploratoryDataAnalysis.ipynb  ExploratryDataAnalysis.ipynb  ModelExperimentation.ipynb  TestingEmbedding.ipynb
notebooks/pickels/: best_model.pkl  best_model_SVD.pkl
sameer/: DataPreperation.py  ModelExperimentation.py  __init__.py  config.py  main.py
sameer/services/llm_service/: llm.py  vectordb.py
sameer/services/ml_service/: DataPreperation.py  MachineLearningRecommender.py
