[tool.poetry]
name = "sameer"
version = "0.1.1"
description = ""
authors = ["Mamdouh"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.6.2"
seaborn = "^0.13.2"
fastapi = {extras = ["all"], version = "^0.110.0"}
uvicorn = {extras = ["standard"], version = "^0.27.1"}
numpy = "^1.26.4"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
qdrant-client = "^1.8.2"
openai = "^1.16.2"
instructor = "^1.0.2"
python-dotenv = "^1.0.1"
tiktoken = "^0.6.0"
llama-index = "^0.10.27"
llama-index-embeddings-openai = "^0.1.7"
polars = "^0.20.19"
ruff = "^0.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
